test/libsolidity/syntaxTests/nameAndTypeResolution/528_fallback_marked_private.sol
contract C {
    function () private { }
}
// ----
// TypeError: (17-40): Fallback function must be defined as "external".
